# butters

./: butters.cabal
.stack-work/install/x86_64-linux/lts-3.13/7.10.2/flag-cache/: QuickCheck-2.8.1-384ce6f25bf1f2050c211e44602823b3  butters-0.1.0.0  primitive-0.6.1.0-842c44bae4dcc3c70cd2af42599ab93d  random-1.1-19f24a9117ee66b96a6e2cbdda5f9ba1  tf-random-0.5-a68f394555024039b9c1edf37b02f600
.stack-work/install/x86_64-linux/lts-3.13/7.10.2/lib/x86_64-linux-ghc-7.10.2/butters-0.1.0.0-BsvUj3aWzgA1bKCFsnr7Vo/Butters/: Parser.dyn_hi  Parser.hi
.stack-work/install/x86_64-linux/lts-3.13/7.10.2/pkgdb/: butters-0.1.0.0-9bf3af2caf5dd4a31a26093c5a8378fe.conf  package.cache
src/Butters/: Ast.hs  Parser.hs  TypeChecker.hs
test/Butters/: TestMain.hs  TestParser.hs  TestTypeChecker.hs
