name:                butters
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/butters#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Butters.Parser
                       ,Butters.TypeChecker
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, parsec -any

test-suite test-butters
  hs-source-dirs:      test/Butters/
  type:                exitcode-stdio-1.0
  main-is:             TestMain.hs
  build-depends:       base >= 4.7 && < 5, butters, QuickCheck -any
